--- a/style.css
+++ b/style.css
@@ -1,11 +1,26 @@
 body {
-    margin: 5%;
+    overflow: hidden;
+    margin: 50px;
     background-color: black;
     color: white
 }
-.mainContent {
-    
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 3fr 1fr 1fr;
 
+.mainContent {
+    display: grid;
+    
+    grid-template-columns: 20% 60% 20%;
+    grid-template-rows: 700px;
+    grid-template-areas: 'borderL game borderR'
+    
+}
+
+.gameWindow {
+    grid-area: game;
+    
+}
+
+
+#imageIFrame {
+    width: 100%;
+    height: 100%;
 }
