--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     overflow: hidden;
     margin: 50px;
-    background-color: black;
+    background-color: rgb(1, 39, 10);
     color: white
 }
 
